# ai-term

./: .gitignore  LICENSE  PRODUCT.md  README.md  terminal-preview.html
.codex/skills/ai-term-release/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: script-panel-prototype.html
docs/previews/: workspace-toggle-preview.html
docs/superpowers/plans/: 2026-07-01-ai-ssh-terminal-implementation-plan.md
docs/superpowers/specs/: 2026-07-01-ai-ssh-terminal-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: production-ui-check.mjs  script-execution.test.mjs
frontend/src/: App.vue  main.ts  styles.css
frontend/src/components/: AiConfigPanel.vue  AiMarkdownMessage.vue  AiPanel.vue  AppShell.vue  CommandHistoryPanel.vue  ConnectionSidebar.vue  ContextMenu.vue  (+6 more)
scripts/: generate-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: commands.rs  events.rs  mod.rs  state.rs
src-tauri/src/domain/: mod.rs  pty.rs  text.rs
src-tauri/src/domain/ai/: chat.rs  config.rs
src-tauri/src/domain/auth/: credentials.rs  keys.rs  mod.rs
src-tauri/src/domain/connection/: bastion.rs  gateway.rs  mod.rs  models.rs  profiles.rs  sftp.rs  transfer.rs
src-tauri/src/domain/filesystem/: local.rs
src-tauri/src/domain/storage/: schema.sql  sqlite.rs
src-tauri/src/domain/terminal/: local.rs  mod.rs  ssh.rs
src-tauri/src/domain/workspace/: mod.rs
src-tauri/tests/: ai_config.rs  app_state_profiles.rs  app_state_terminal.rs  gateway_transcript.rs  key_metadata.rs  local_terminal_smoke.rs  profile_validation.rs  sqlite_ai_configs.rs  sqlite_profiles.rs  sqlite_schema.rs  sqlite_workspace.rs  ssh_launch_plan.rs  terminal_events.rs  transfer_strategy.rs
(+10 files in other folders)
